      source is not enabled (LP: #635003) 

  [ Kiwinote ]
  * data/software-center.menu.in:
    - fix typo to now use applications-ocaml icon, thanks mpt (LP: #635732)
  * softwarecenter/backend/channel.py:
    - allow 'for purchase' to have an icon in non-English locales (LP: #636242)
  * softwarecenter/db/application.py:
    - try to open deb file, except on any sort of error (LP: #633379)
  * softwarecenter/db/database.py:
    - return None for get_appname() when we don't have an appname
  * softwarecenter/view/appdetailsview_gtk.py:
    - use the display name for app entry in 'where is it' (LP: #635464)
    - restore correct padding in addons status bar (LP: #625230)

 -- Gary Lasker <gary.lasker@canonical.com>  Fri, 10 Sep 2010 21:45:05 -0400

software-center (2.1.18.1) maverick; urgency=low

  [ Colin Watson ]
  * Update tests/xapian_query.py for compatibility with Xapian 1.2.x.
  
  [ Michael Vogt ]
  * softwarecenter/backend/aptd.py:
    - fix bug in removal (thanks to davmor2)
  * data/software-center.menu.in:
    - update icon names for latest additions from humanity (thanks
      to vish!

  [ Kiwinote ]
  * data/ui/SoftwareCenter.ui:
    - no more icon for software sources (LP: #634987)
  * softwarecenter/backend/aptd.py:
    - allow us to remove pkgs again (LP: #634929)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Sep 2010 20:32:48 +0200

software-center (2.1.18) maverick; urgency=low

  [ Michael Vogt ]
  * use "match.document" instead of "match[xapian.MSET_DOCUMENT]"
    to be compatible with xapian 1.2.x (closes: 596079)
  * softwarecenter/view/catview_gtk.py:
    - fix a missing glib.markup_escape_text()
  * merged  lp:~glatzor/software-center/aptdaemon-polish, many
    thanks!

  [ Kiwinote ]
  * softwarecenter/backend/aptd.py:
    - don't crash on cancelling policykit auths (LP: #634697)
  * softwarecenter/view/appview.py:
    - don't crash on searches containing ", " (LP: #634549)

  [ Gary Lasker ]