@@ -14,11 +14,15 @@ software-center (2.1.18.2) UNRELEASED; urgency=low
     - allow 'for purchase' to have an icon in non-English locales (LP: #636242)
   * softwarecenter/db/application.py:
     - try to open deb file, except on any sort of error (LP: #633379)
+    - simplify when we use which warnings for deb files (LP: #635015)
+    - reload pkg cache object and xapian doc if it turns out that the pkgname
+      of a deb file is different than what we guessed on basis of the file name
   * softwarecenter/db/database.py:
     - return None for get_appname() when we don't have an appname
   * softwarecenter/view/appdetailsview_gtk.py:
     - use the display name for app entry in 'where is it' (LP: #635464)
     - restore correct padding in addons status bar (LP: #625230)
+    - use installed state in status bar for reinstallable debs (LP: #635015)
 
  -- Gary Lasker <gary.lasker@canonical.com>  Fri, 10 Sep 2010 21:45:05 -0400
 
